trent-dev-org/force-app/main/default/objects/Title__c/fields/Average_Review__c.field-meta.xml
<CustomField>
    <fullName>Average_Review__c</fullName>
    <description>Uses rollup summary fields to calculate an average</description>
    <formula>Review_Sum__c /  Review_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>