trent-dev-org/force-app/main/default/objects/Title__c/fields/Is_Feature__c.field-meta.xml
<CustomField>
    <fullName>Is_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Feature?</label>
    <type>Checkbox</type>
</CustomField>