trent-dev-org/force-app/main/default/objects/Title__c/fields/Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Count__c</fullName>
    <description>Count of reviews</description>
    <label>Review Count</label>
    <summaryForeignKey>Customer_Review__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>