trent-dev-org/force-app/main/default/objects/Title__c/fields/Review_Sum__c.field-meta.xml
<CustomField>
    <fullName>Review_Sum__c</fullName>
    <description>Average rating for reviews</description>
    <label>Review Sum</label>
    <summarizedField>Customer_Review__c.Star_Rating__c</summarizedField>
    <summaryForeignKey>Customer_Review__c.Title__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>