trent-dev-org/force-app/main/default/objects/Title__c/listViews/Featured_Titles.listView-meta.xml
<ListView>
    <fullName>Featured_Titles</fullName>
    <columns>NAME</columns>
    <columns>Total_Stock__c</columns>
    <columns>Available_Stock__c</columns>
    <columns>Genre__c</columns>
    <columns>Is_Feature__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Feature__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Featured Titles</label>
</ListView>